# shopping_mall_train

./: .gitignore  README.md  main.py  model_test.py  no_train.py  pyproject.toml
data/: custom_dataset.py  my_dataloader.py  test_dataset.py
loss/: triplet_loss.py
model/: my_model.py  normalization.py  pooling.py  whitening.py
tests/: test_lightning_test.py
